--- a/App/App.csproj
+++ b/App/App.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DatabaseModel\DatabaseModel.csproj" />
+    <ProjectReference Include="..\Entprog.DataModel\Entprog.DataModel.csproj" />
   </ItemGroup>
 
 </Project>
